--- a/src/main/resources/templates/aluno/alunoCreate.html
+++ b/src/main/resources/templates/aluno/alunoCreate.html
@@ -40,109 +40,106 @@
 								<label>* Esses campos são obrigatórios</label>
 							</div>
 					</div>
+					<div class="row justify-content-center">
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="ra" class="col-form-label text-right">RA</label>
+		                                <div class="controls">
+		                                    <input type="number" name="ra"
+		                                           id="ra" class="form-control"
+		                                           autofocus="autofocus"
+		                                           th:field="*{ra}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('ra')}" th:errors="*{ra}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
                     <div class="row justify-content-center">
-                    	<div class="field-wrapper col-8">
-				             <input type="number" name="ra"
-	                                   id="ra" class="form-control"
-	                                   th:field="*{ra}" autofocus="autofocus" >
-				            <div class="field-placeholder"><span>RA*</span></div>
-				        </div>
-				    </div>
-				    <div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('ra')}"
-									th:errors="*{ra}"></div>
-							</div>
-						</div>
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="nome" class="col-form-label text-right">Nome</label>
+		                                <div class="controls">
+		                                    <input type="text" name="nome"
+		                                           id="nome" class="form-control"
+		                                           th:field="*{nome}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
+                   <div class="row justify-content-center">
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="email" class="col-form-label text-right">Email</label>
+		                                <div class="controls">
+		                                    <input type="email" name="email"
+		                                           id="email" class="form-control"
+		                                           th:field="*{email}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
                     <div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="text" name="nome"
-	                                   id="nome" class="form-control"
-	                                   th:field="*{nome}" autofocus="autofocus" >
-				            <div class="field-placeholder"><span>Nome Completo*</span></div>
-						</div>
-					</div>
-					<div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('nome')}"
-									th:errors="*{nome}"></div>
-							</div>
-				     </div>
-					 <div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="email" name="email"
-	                                   id="email" class="form-control"
-	                                   th:field="*{email}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Email*</span></div>
-						</div>
-					</div>
-					<div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('email')}"
-									th:errors="*{email}"></div>
-							</div>
-				     </div>
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="nome_usuario" class="col-form-label text-right">Nome de Usuário</label>
+		                                <div class="controls">
+		                                    <input type="text" name="nome_usuario"
+		                                           id="nome_usuario" class="form-control"
+		                                           th:field="*{nomeUsuario}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('nomeUsuario')}" th:errors="*{nomeUsuario}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
+                    
 					<div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="text" name="nome_usuario"
-	                                   id="nome_usuario" class="form-control"
-	                                   th:field="*{nomeUsuario}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Nome de Usuário*</span></div>
-						</div>
-					</div>
-					<div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('nomeUsuario')}"
-									th:errors="*{nomeUsuario}"></div>
-							</div>
-				     </div>
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="telefone" class="col-form-label text-right">Telefone</label>
+		                                <div class="controls">
+		                                    <input type="text" name="telefone"
+		                                           id="telefone" class="form-control"
+		                                           th:field="*{telefone}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
 					<div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="text" name="telefone"
-	                                   id="telefone" class="form-control"
-	                                   th:field="*{telefone}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Telefone</span></div>
-						</div>
-					</div>
-					<div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								
-							</div>
-				     </div>
-					<div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="password" name="senha"
-	                                   id="senha" class="form-control"
-	                                   th:field="*{senha}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Senha*</span></div>
-						</div>
-					</div>
-                    <div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('senha')}"
-									th:errors="*{senha}"></div>
-							</div>
-				     </div>
-				     <div class="row justify-content-center">
-		                 <div class="field-wrapper col-8">
-						  <input type="password" name="confirmarSenha"
-	                                   id="confirmarSenha" class="form-control"
-	                                   th:field="*{confirmarSenha}" autofocus="autofocus" >
-						  <div class="field-placeholder"><span>Confirmar Senha*</span></div>
-						</div>
-					</div>
-					<div class="form-group row justify-content-center">
-							<div class="input-group col-8">
-								<div style="color: red"
-									th:if="${#fields.hasErrors('confirmarSenha')}"
-									th:errors="*{confirmarSenha}"></div>
-							</div>
-				     </div>
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="senha" class="col-form-label text-right">Senha</label>
+		                                <div class="controls">
+		                                    <input type="password" name="senha"
+		                                           id="senha" class="form-control"
+		                                           th:field="*{senha}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
+                    <div class="row justify-content-center">
+						<div class="col-8">
+							<div class="form-group" >
+		                                <label for="confirmarSenha" class="col-form-label text-right">Confirmar Senha</label>
+		                                <div class="controls">
+		                                    <input type="password" name="confirmarSenha"
+		                                           id="confirmarSenha" class="form-control"
+		                                           th:field="*{confirmarSenha}"
+		                                    />
+		                                    <div style="color: red;" th:if="${#fields.hasErrors('confirmarSenha')}" th:errors="*{confirmarSenha}" ></div>
+		                                </div>
+		                     </div>
+	                     </div>
+                    </div>
                     <hr/>
                     <div class="form-group row justify-content-center ">
                         <div class=" col-sm-2">
