--- a/src/main/resources/templates/proposta/proposta.html
+++ b/src/main/resources/templates/proposta/proposta.html
@@ -19,10 +19,16 @@
 					<form th:object="${alunos}" th:action="@{/gtcc/proposta/gerar/}"
 						method="POST" autocomplete="off"
 						class="form-default form-horizontal" name="form">
+						
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<label style="margin-bottom: 0px;">Nome do Aluno*</label>
+							</div>
+						</div>
+						
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
 								<select name="aluno" class="form-control">
-									<option value="">Nome do Aluno*</option>
 									<option th:each="aluno : ${alunos}"
 										th:value="${aluno.idUsuario}" th:text="${aluno.nome}"></option>
 								</select>
@@ -37,16 +43,16 @@
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
-								<label>Avaliação *</label>
+								<label style="margin-bottom: 0px;">Avaliação *</label>
 							</div>
 						</div>
 
 
 						<div class="form-group offset-md-2 offset-sm-1">
 							<div class="form-check row">
-								<input class="form-check-input" type="radio" name="avaliacao"
+								<input class="form-check-input" type="radio" CHECKED name="avaliacao"
 									id="avaliacao" value="1"> <label
-									class="form-check-label" for="avaliacao1"> 1° Bimestre
+									class="form-check-label" sele for="avaliacao1"> 1° Bimestre
 								</label>
 							</div>
 							<div class="form-check row">
@@ -88,6 +94,13 @@
 			</div>
 			<div id="push"></div>
 		</div>
+		
+		<script type="text/javascript">
+                    
+               document.getElementsByName("aluno")[0].selectedIndex = "0";
+                    
+                    
+                   </script>
 	</section>
 
 </body>
