--- a/src/main/resources/templates/proposta/proposta.html
+++ b/src/main/resources/templates/proposta/proposta.html
@@ -48,11 +48,11 @@
 						</div>
 
 
-						<div class="form-group offset-md-2 offset-sm-1">
+						<div id="bimestre" class="form-group offset-md-2 offset-sm-1">
 							<div class="form-check row">
 								<input class="form-check-input" type="radio" CHECKED name="avaliacao"
 									id="avaliacao" value="1"> <label
-									class="form-check-label" sele for="avaliacao1"> 1° Bimestre
+									class="form-check-label" for="avaliacao1"> 1° Bimestre
 								</label>
 							</div>
 							<div class="form-check row">
@@ -86,6 +86,7 @@
 								<button id="btn_salvar" type="submit"
 									class="btn btn-lg btn-success">Gerar</button>
 							</div>
+							
 
 						</div>
 
@@ -96,9 +97,29 @@
 		</div>
 		
 		<script type="text/javascript">
-                    
-               document.getElementsByName("aluno")[0].selectedIndex = "0";
-                    
+		
+			function abrePdf(){
+	     	   var path0= window.location.href;
+	     	   //console.log(path0);
+	     	   var bimestre= document.querySelector('input[name="avaliacao"]:checked').value
+	     	   console.log(bimestre)
+	     	   if(bimestre == "1"){
+		     	   setTimeout(function (){
+		         	   window.open(path0 + "/show/1", "_blank", "");
+		         	   window.open(path0 + "/show/2", "_blank", "");
+		         	   window.open(path0 + "/show/3", "_blank", "");
+		     	   },3000)
+	     	   }else{
+	     		  setTimeout(function (){
+		         	   window.open(path0 + "/show/1", "_blank", "");
+		     	   },1000)
+	     	   }
+	        }
+		
+            document.getElementsByName("aluno")[0].selectedIndex = "0";
+            document.getElementById("btn_salvar").addEventListener("click", abrePdf)
+
+               
                     
                    </script>
 	</section>
