feat: WIP lançamento de notas

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -109,7 +109,7 @@
                             Mapa de Notas
                         </a>
                          <div class="dropdown-menu" aria-labelledby="navbarAdmin">
-                            <a class="dropdown-item" href="#" >Lançar nota</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/mapanotas/lancarNotas}" >Lançar nota</a>
                             <a class="dropdown-item" th:href="@{/gtcc/mapanotas}" >Consultar</a>
                         </div> 
                     </li>
