--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -96,6 +96,15 @@
                     <li 
                         class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Critério
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarAdmin">
+                            <a class="dropdown-item" th:href="@{/gtcc/criterioavaliacao/cadastrar}" >Cadastrar</a>
+                        </div> 
+                    </li>
+                    <li 
+                        class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Ficha de Identificação
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
