--- a/src/main/resources/templates/mapanotas/lancar_notas.html
+++ b/src/main/resources/templates/mapanotas/lancar_notas.html
@@ -23,6 +23,7 @@
 								};
 							/*]]>*/
 						</script>
+						
 					</div>
             
             
@@ -30,6 +31,13 @@
                     <h3>Lançamento de notas</h3>
                 </div>
                 <hr/>
+                
+                <script th:inline="javascript">
+							/*<![CDATA[*/
+								var quantidade_avaliacoes = [[${criterioAvaliacao.quantidadeAvaliacao}]]; 
+							   	console.log("QUANTIDADE AVALIACAO", quantidade_avaliacoes);
+							/*]]>*/
+						</script>
                 <!-- MESSAGES -->
                 <form th:object="${mapaNotas}" th:action="@{/gtcc/mapaNotas/lancarNotas}" method="POST" autocomplete="off"
                       class="form-default form-horizontal" name="form">
