--- a/src/main/resources/templates/mapanotas/lancar_notas.html
+++ b/src/main/resources/templates/mapanotas/lancar_notas.html
@@ -32,12 +32,6 @@
                 </div>
                 <hr/>
                 
-                <script th:inline="javascript">
-							/*<![CDATA[*/
-								var quantidade_avaliacoes = [[${criterioAvaliacao.quantidadeAvaliacao}]]; 
-							   	console.log("QUANTIDADE AVALIACAO", quantidade_avaliacoes);
-							/*]]>*/
-						</script>
                 <!-- MESSAGES -->
                 <form th:object="${mapaNotas}" th:action="@{/gtcc/mapaNotas/lancarNotas}" method="POST" autocomplete="off"
                       class="form-default form-horizontal" name="form">
@@ -78,7 +72,7 @@
 		                     </div>
 	                     </div>
                     </div>
-                    <hr/>
+                    <hr id="end-input"/>
                     <div class="form-group row justify-content-center ">
                         <div class=" col-sm-2">
                             <a id="alert" class="btn btn-lg btn-danger" th:href="@{/gtcc/login}">
@@ -97,7 +91,39 @@
         </div>
         <div id="push"></div>
     </div>
-</section>
+    <script th:inline="javascript">
+		/*<![CDATA[*/
+			var quantidade_avaliacoes = [[${criterioAvaliacao.quantidadeAvaliacao}]]; 
+			var quantidade_notas = [[${criterioAvaliacao.quantidadeNotas}]].split(",");
 
+			for (let i = 0; i<quantidade_avaliacoes;i++){	
+				let count = i+1;
+				let inputs = "";
+				
+				for(let j = 0; j< quantidade_notas[i]; j++){
+					let count_nota = j + 1;
+					inputs += "<input type='number' name='nota-"+count+"-"+count_nota+
+                    			"id='nota-"+count+"-"+count_nota+" class='form-control'"+
+                    			"placeholder='Nota "+count_nota+"'"+
+             					"/>"
+				}
+				
+				   	$("#end-input").before(
+				   		  "<div class='row justify-content-center'>"+
+								"<div class='col-8'>"+
+									"<div class='form-group' >"+
+				                                "<label for='bim-'"+count+ "class='col-form-label text-right'> "+count+"Bimestre</label>"+
+				                                "<div class='controls'>"+
+				                                	inputs+
+				                                "</div>"+
+				                     "</div>"+
+			                     "</div>"+
+		                    "</div>"
+				   			);	
+			}
+
+		/*]]>*/
+	</script>
+</section>				
 </body>
 </html>
