--- a/src/main/resources/templates/mapanotas/lancar_notas.html
+++ b/src/main/resources/templates/mapanotas/lancar_notas.html
@@ -93,6 +93,9 @@
     </div>
     <script th:inline="javascript">
 		/*<![CDATA[*/
+			/*
+				CONSTRUÇÃO DOS CAMPOS DE NOTAS PARA O LANÇAMENTO DE NOTAS
+			*/
 			var quantidade_avaliacoes = [[${criterioAvaliacao.quantidadeAvaliacao}]]; 
 			var quantidade_notas = [[${criterioAvaliacao.quantidadeNotas}]].split(",");
 
@@ -103,16 +106,16 @@
 				for(let j = 0; j< quantidade_notas[i]; j++){
 					let count_nota = j + 1;
 					inputs += "<input type='number' name='nota-"+count+"-"+count_nota+
-                    			"id='nota-"+count+"-"+count_nota+" class='form-control'"+
+                    			"' id='nota-"+count+"-"+count_nota+"' class='form-control'"+
                     			"placeholder='Nota "+count_nota+"'"+
              					"/>"
+                    			
 				}
-				
 				   	$("#end-input").before(
 				   		  "<div class='row justify-content-center'>"+
 								"<div class='col-8'>"+
 									"<div class='form-group' >"+
-				                                "<label for='bim-'"+count+ "class='col-form-label text-right'> "+count+"Bimestre</label>"+
+				                                "<label for='bim-"+count+ "' class='col-form-label text-right'> "+count+"Bimestre</label>"+
 				                                "<div class='controls'>"+
 				                                	inputs+
 				                                "</div>"+
@@ -121,6 +124,42 @@
 		                    "</div>"
 				   			);	
 			}
+			
+			/*
+				SETANDO VALORES DEFAULT PARA AS NOTAS
+			*/
+			for (let i = 0; i<quantidade_avaliacoes;i++){	
+				let count = i+1;				
+				for(let j = 0; j< quantidade_notas[i]; j++){
+					let count_nota = j + 1;
+					document.getElementById("nota-"+count+"-"+count_nota).defaultValue = 0.0;
+				}
+			}
+			
+			
+			/*
+				CAPTAÇÃO DOS VALORES
+			*/
+			$('#form').submit(function() {
+
+				//captura a quantidade de notas
+				let count = 0;
+				let notas = "";
+				console.log("EXECUTOU");
+				$("[name^='nota-']").each(function(){
+					qtdNotas += "" + this.value;
+					if (++count == quantidade_notas[0]){
+						qtdNotas += "|";
+						quantidade_notas.shift();
+					}else{
+						qtdNotas += ",";
+					}
+				});
+				qtdNotas = qtdNotas.substring(0, qtdNotas.length-1);
+				
+				console.log("NOTA:", qtdNotas);
+
+			});
 
 		/*]]>*/
 	</script>
