--- a/src/main/resources/templates/agendamentodefesa/defesaCreate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaCreate.html
@@ -10,154 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GTCC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css"
-        rel="stylesheet">
-    <script src="../../static/js/jquery_mask/jquery.mask.js"></script>   
-    <script src="../../static/js/jquery_mask/jquery.mask.min.js"></script>  
-	<script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>        
-
-<style>
-.defesa h3 {
-    text-align: center;
-    font-size: 2em;
-    margin: 1em auto 1em;
-}
-.defesas-detalhe {
-    background-color: #e5e5e5;
-    padding: 2em 3em;
-    border-radius: 5px;
-    width: 100%;
-}
-table {
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
-thead {
-    width: 100%;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 1em;
-}
-.defesas-detalhe h5 {
-    font-size: 1.5em;
-    padding-bottom: .5em;
-}
-table th { padding-left: 0.25em; }
-table .infos {
-    text-align: left;
-    font-weight: 700;  
-    padding-left: 0.5em;
-}
-table th {
-    text-transform: none;
-    font-weight: 100;
-}
-  .jumbotron { background: #fff; }
-  .fa { font-size: 0.5em; }
-  .calendar table { width: 100%; }
-  .calendar th { text-align: center; }
-  .calendar td {
-    width: 120px;
-    height: 100px;
-    text-align: center;
-    line-height: 100px !important;
-    font-size: 1.5em;
-  }
-  .calendar td, #year { font-family: monospace; }
-  .calendar .hover { background: #eee; }
-  .calendar #about {
-    font-size: 5em !important;
-    position: absolute;
-    top: -35px;
-    right: 15px;
-  }
-  #about a { text-decoration: none; }
-  
-  .pdf {
-    background-color: #e5e5e5;
-    padding: 1em;
-    border-radius: 5px;
-    text-align: center;
-  }
-  .pdf h5 {
-    text-align: left;
-    padding-bottom: 1em;
-  }
-  .pdf button {
-    background-color: #343F4B;
-    border: none;
-    padding: .5em 2em;
-    color: white;
-    text-transform: uppercase;
-  }
-.cadastro-defesa form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 1em;
-}
-.cadastro-defesa label {
-  width: 100%;
-  padding-top: .5em;
-}
-.cadastro-defesa .botoes {
-  padding-top: 1em;
-  display: flex;
-  justify-content: space-between;
-  
-}
-.cadastro-defesa .botoes .cancelar {
-  background-color: #343F4B;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-.cadastro-defesa .botoes .excluir {
-  background-color:#B60003;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-.cadastro-defesa .botoes .confirmar {
-  background-color: #77D353;
-  border: none;
-  padding: .5em 2em;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  width: 150px;
-}
-.cadastro-defesa .banca h5 {
-  margin: .5em 0 0 0;
-  font-size: 20px;
-  padding: 0;
-}
-.cadastro-defesa input { width: 100%; }
-.visu-defesa .banca .prof { padding-top: 0.5em; }
-.visu-defesa .banca .titulo { margin-left: 1.5em; }
-.cadastro-defesa .horalocal {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.cadastro-defesa form .nome,
-.cadastro-defesa form .titulo {
-  display: flex;
-  flex-direction: column;
-}
-</style>
-
 
 <body>
 	<section class="main-content"  layout:fragment="content">
@@ -214,21 +67,21 @@ table th {
 						class="form-default form-horizontal" >
 						<div class="form-group row justify-content-center">
 							<div class="controls col-sm-12 col-sm-12">
-								<select id="alunoSelecionado" class="form-control">
-									<option value="">Selecione o Aluno*</option>
+								<select th:field="*{fichaIdentificacao}" id="fichaIdentificacao" class="form-control">
+									<option value="" >Selecione o Aluno*</option>
 									<option th:each="ficha : ${fichas}"
 										th:value="${ficha.id}"
-										th:text="${ficha.aluno.nome}"></option>
+										th:text="${ficha.aluno.nome}" onchange="showMe({$ficha});"></option>
 								</select>
 							</div>
 						</div>
 						<div class="form-group row justify-content-center">
                         <div class="controls col-sm-12 col-sm-12">
-								<input id="tituloTrabalho" type="text" value="Título do trabalho*" disabled / style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;">
+								<input id="tituloTrabalho" type="text" placeholder="Título do trabalho*" disabled / style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;">
 							</div>
 						</div>
-						<form>
-						<div class="form-row">
+						<div class="input-group">
+							<div class="form-row">
                         	<div class="col">
 								<input type="text" name="dataDefesa"
 									id="dataDefesa" class="form-control"
@@ -256,23 +109,23 @@ table th {
 									<div style="color: red;" th:if="${#fields.hasErrors('local')}" th:errors="*{local}" ></div>
 							</div>
 						</div>
-						</form>
+						</div>
 						<div class="form-group row justify-content-center ">
 							
 						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="orientador" type="text" autofocus="autofocus" value="Orientador" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
+								<input id="orientador" type="text" autofocus="autofocus" placeholder="Orientador" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="avaliador1" type="text" autofocus="autofocus" value="Avaliador 1" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
+								<input id="avaliador1" type="text" autofocus="autofocus" placeholder="Avaliador 1" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<div class="form-group row justify-content-center ">
 							<div class="controls col-sm-12 col-sm-12">
-								<input id="avaliador2" type="text" autofocus="autofocus" value="Avaliador 2" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
+								<input id="avaliador2" type="text" autofocus="autofocus" placeholder="Avaliador 2" disabled style="height: 40px;border-radius: 5px;border: 1px solid #bebebe;width: 100%;padding: 0 1em;"/>
 							</div>
 						</div>
 						<p class="text-danger text-center">*Campos obrigatórios.</p>
@@ -290,13 +143,10 @@ table th {
 						</div>
 						
 							<script th:inline="javascript">
-								$('#alunoSelecionado').change(function() {
-							    	selectedOption = $('option:selected', this);
-							    	$("#tituloTrabalho").val( selectedOption.data('tituloTrabalho') );
-							    	$("#orientador").val( selectedOption.data('orientadorIdProfessor') );
-							   		$("#avaliador1").val( selectedOption.data('avaliador1IdProfessor') );
-							   		$("#avaliador2").val( selectedOption.data('avaliador2IdProfessor') );
-								});
+								function showMe (ficha) {
+	
+									document.getElementById("orientador").placeholder(ficha.orientador);
+			                    }
 							</script>
 						
 						<!--  MODAL -->
