--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -41,8 +41,8 @@
                             Declarações
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
-                            <a  class="dropdown-item" >Cadastrar</a>
-                            <a  class="dropdown-item">Consultar</a>
+                            <a  class="dropdown-item" th:href="@{/gtcc/declaracoes/cadastro}" >Cadastrar</a>
+                            <a  class="dropdown-item" th:href="@{/gtcc/declaracoes/consulta}">Consultar</a>
                         </div>
                     </li>
 
